adjust placement of lengend to avoid overlap and make map height bigger

--- a/src/index.scss
+++ b/src/index.scss
@@ -77,6 +77,12 @@ nav.navbar {
   color: $coastal-meadow;
 }
 
+.map .ol-zoom {
+  top: 10px;
+  left: auto;
+  right: 10px;
+}
+
 .legend-item {
   display: flex;
   align-items: center;
@@ -91,12 +97,16 @@ nav.navbar {
 
 .legend-container {
   position: absolute;
-  right: 0;
-  bottom: 40px;
-  z-index: 2;
+  left: 10px;
+  top: 10px;
+  z-index: 1;
   background-color: #ffffff;
   padding: 5px;
   margin-right: 10px;
+}
+
+.map-popup {
+  z-index: 10;
 }
 
 .chart-display {
